[gd_scene load_steps=2 format=3 uid="uid://dwve11s71aa6x"]

[ext_resource type="Script" path="res://ui/bak_custom_xml_viewer/symbol_view_control.gd" id="1_e58l6"]

[node name="SymbolViewControl" type="MarginContainer"]
custom_minimum_size = Vector2(300, 0)
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 37.0
grow_horizontal = 2
size_flags_horizontal = 3
theme_override_constants/margin_left = 3
theme_override_constants/margin_top = 3
theme_override_constants/margin_right = 3
theme_override_constants/margin_bottom = 3
script = ExtResource("1_e58l6")

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 2

[node name="Left" type="HBoxContainer" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Label" type="Label" parent="HBoxContainer/Left"]
custom_minimum_size = Vector2(30, 0)
layout_mode = 2
text = "1"

[node name="TypeLabel" type="OptionButton" parent="HBoxContainer/Left"]
clip_contents = true
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
text_overrun_behavior = 3
clip_text = true

[node name="ClsLabel" type="OptionButton" parent="HBoxContainer/Left"]
clip_contents = true
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
size_flags_horizontal = 3
clip_text = true

[node name="ClsTextLabel" type="LineEdit" parent="HBoxContainer/Left"]
visible = false
custom_minimum_size = Vector2(30, 0)
layout_mode = 2
size_flags_horizontal = 3
text = "text"

[node name="VSeparator" type="VSeparator" parent="HBoxContainer"]
visible = false
layout_mode = 2

[node name="Right" type="HBoxContainer" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 8
alignment = 2

[node name="XMinLabel" type="Label" parent="HBoxContainer/Right"]
clip_contents = true
custom_minimum_size = Vector2(40, 0)
layout_mode = 2
size_flags_horizontal = 9
text = "1234"
horizontal_alignment = 1

[node name="YMinLabel" type="Label" parent="HBoxContainer/Right"]
clip_contents = true
custom_minimum_size = Vector2(40, 0)
layout_mode = 2
size_flags_horizontal = 9
text = "1234"
horizontal_alignment = 1

[node name="XMaxLabel" type="Label" parent="HBoxContainer/Right"]
clip_contents = true
custom_minimum_size = Vector2(40, 0)
layout_mode = 2
size_flags_horizontal = 9
text = "1234"
horizontal_alignment = 1

[node name="YMaxLabel" type="Label" parent="HBoxContainer/Right"]
clip_contents = true
custom_minimum_size = Vector2(40, 0)
layout_mode = 2
size_flags_horizontal = 9
text = "1234"
horizontal_alignment = 1

[node name="DegreeLabel" type="Label" parent="HBoxContainer/Right"]
clip_contents = true
custom_minimum_size = Vector2(40, 0)
layout_mode = 2
size_flags_horizontal = 9
text = "1234"
horizontal_alignment = 1

[connection signal="focus_entered" from="." to="." method="_on_focus_entered"]
[connection signal="focus_exited" from="." to="." method="_on_focus_exited"]
[connection signal="item_selected" from="HBoxContainer/Left/TypeLabel" to="." method="_on_type_label_item_selected"]
[connection signal="item_selected" from="HBoxContainer/Left/ClsLabel" to="." method="_on_cls_label_item_selected"]
[connection signal="text_changed" from="HBoxContainer/Left/ClsTextLabel" to="." method="_on_cls_text_label_text_changed"]
[connection signal="text_submitted" from="HBoxContainer/Left/ClsTextLabel" to="." method="_on_cls_text_label_text_submitted"]
